--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
@@ -52,6 +54,31 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+
+	   <dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-data-jpa</artifactId>
+       </dependency>
+
+	   <dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.36</version>
+	   </dependency>
+
+    	<dependency>
+    	    <groupId>mysql</groupId>
+			<version>8.0.33</version>
+    	    <artifactId>mysql-connector-java</artifactId>
+    	    <scope>runtime</scope>
+    	</dependency>
+
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>1.0.2</version> 
+		</dependency>
+
 	</dependencies>
 
 	<build>
