--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 server.port=8083
 spring.application.name=aibroker-service
+spring.datasource.url=jdbc:mysql://127.0.0.1:3307/aibroker_db
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.servlet.context-path=/v1
