--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   mysql:
+    platform: linux/x86_64
     image: mysql:8.0.25
     container_name: aibroker_mysql
     ports:
