--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,12 @@
 			<version>7.0.2.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
