--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,11 +18,16 @@ spring:
       connection-timeout: 30000
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+    locations: classpath:db/migration
+    validate-on-migrate: true
   main:
     allow-bean-definition-overriding: true
   security:
