--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -7,17 +7,17 @@ spring:
   application:
     name: aibroker-service-test
   datasource:
-    url: jdbc:h2:mem:testdb
-    username: sa
-    password: ""
-    driver-class-name: org.h2.Driver
+    url: jdbc:mysql://localhost:3307/aibroker_db_test
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: validate
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
+        dialect: org.hibernate.dialect.MySQLDialect
   main:
     allow-bean-definition-overriding: true
 
