--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,9 +20,10 @@ spring:
     hibernate:
       ddl-auto: validate
     show-sql: false
+    open-in-view: false
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQLDialect
+
   flyway:
     enabled: true
     baseline-on-migrate: true
