chore: update application port configuration to use environment variable

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+SPRING.APPLICATION.PORT=8083
+
 SPRING.DATASOURCE.URL=jdbc:mysql://127.0.0.1:3307/aibroker_db
 SPRING.DATASOURCE.USERNAME=admin
 SPRING.DATASOURCE.PASSWORD=admin
