--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,22 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8" ?>
+<project
+    xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
+>
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.4.10</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.delimce</groupId>
 	<artifactId>aibroker-service</artifactId>
 	<version>0.1.5-SNAPSHOT</version>
 	<name>aibroker-service</name>
 	<description>API suite for managing requests to AI LLM models</description>
-	<url/>
+	<url />
 	<licenses>
 		<license>
 			<name>Creative Commons Attribution-NonCommercial-ShareAlike</name>
@@ -28,10 +31,10 @@
 		</developer>
 	</developers>
 	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
+		<connection />
+		<developerConnection />
+		<tag />
+		<url />
 	</scm>
 	<properties>
 		<java.version>21</java.version>
@@ -238,6 +241,50 @@
 								<exclude>**/AibrokerApplication.class</exclude>
 								<!-- Exclude generated classes -->
 								<exclude>**/mapper/*MapperImpl.class</exclude>
+							</excludes>
+							<consoleOutput>true</consoleOutput>
+						</configuration>
+					</execution>
+					<execution>
+						<id>check</id>
+						<phase>test</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<rule>
+									<element>BUNDLE</element>
+									<limits>
+										<limit>
+											<counter>LINE</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.80</minimum>
+										</limit>
+										<limit>
+											<counter>BRANCH</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.80</minimum>
+										</limit>
+										<limit>
+											<counter>INSTRUCTION</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.80</minimum>
+										</limit>
+									</limits>
+								</rule>
+							</rules>
+							<excludes>
+								<!-- Exclude configuration classes -->
+								<exclude>**/config/**/*</exclude>
+								<!-- Exclude main application class -->
+								<exclude>**/AibrokerApplication.class</exclude>
+								<!-- Exclude generated classes -->
+								<exclude>**/mapper/*MapperImpl.class</exclude>
+								<!-- Exclude mappers classes -->
+								<exclude>**/mappers/**/*</exclude>
+								<!-- Exclude enums classes -->
+								<exclude>**/domain/enums/**/*</exclude>
 							</excludes>
 						</configuration>
 					</execution>
