feat: add spring-ai library and create DeepSeekAdapter with message merging logic

--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.10</version>
+		<version>3.5.10</version>
 		<relativePath />
 		<!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.delimce</groupId>
 	<artifactId>aibroker-service</artifactId>
-	<version>0.9.9-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>aibroker-service</name>
 	<description>API suite for managing requests to AI LLM models</description>
 	<url />
@@ -283,12 +283,12 @@
 								<exclude>**/config/**/*</exclude>
 								<!-- Exclude main application class -->
 								<exclude>**/AibrokerApplication.class</exclude>
-								<!-- Exclude generated classes -->
+								<!-- Exclude generated mapper implementations -->
 								<exclude>**/mapper/*MapperImpl.class</exclude>
-								<!-- Exclude mappers classes -->
-								<exclude>**/mappers/**/*</exclude>
-								<!-- Exclude enums classes -->
-								<exclude>**/domain/enums/**/*</exclude>
+								<!-- Exclude mapper interfaces -->
+								<exclude>**/mappers/**/*.class</exclude>
+								<!-- Exclude enums -->
+								<exclude>**/domain/enums/**/*.class</exclude>
 							</excludes>
 						</configuration>
 					</execution>
